--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,27 @@
 {
-  "short_name": "letmeask",
   "name": "Let me Ask",
+  "description": "Let me ask! App para criar e esclarecer dúvidas em tempo real.",
+  "start_url": "./index.html",
+  "display": "standalone",
+  "orientation": "portrait",
+  "theme_color": "#835AFD",
+  "background_color": "#282a36",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "pwa-favicon.png",
+      "sizes": "48x48",
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
-      "src": "logo192.png",
+      "src": "pwa-logo-192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "pwa-logo-512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#835AFD",
-  "background_color": "#F8F8F8"
+  ]
 }
