--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-modal": "^3.12.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-toggle": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
