--- a/package.json
+++ b/package.json
@@ -3,13 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
     "classnames": "^2.3.1",
     "firebase": "^8.6.8",
     "node-sass": "^5.0.0",
@@ -20,7 +13,6 @@
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
     "react-toggle": "^4.1.2",
-    "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
     "workbox-background-sync": "^5.1.3",
     "workbox-broadcast-update": "^5.1.3",
@@ -38,15 +30,17 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "dev-start-cy": "react-scripts -r @cypress/instrument-cra start --env=jsdom --coverage",
+    "dev-cy:open": "cypress open",
+    "dev-cy:run": "cypress run",
+    "dev-devtools": "react-devtools",
     "format": "prettier --write src/**/*.ts{,x}",
     "lint": "tsc --noEmit && eslint src/**/*.ts{,x}"
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -61,17 +55,31 @@
       "last 1 safari version"
     ]
   },
+  "nyc": {
+    "extends": "@istanbuljs/nyc-config-typescript",
+    "all": true,
+    "include": "src/**/*.tsx"
+  },
   "devDependencies": {
+    "@cypress/code-coverage": "^3.9.7",
+    "@cypress/instrument-cra": "^1.4.0",
+    "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@testing-library/cypress": "5.3.1",
+    "@types/node": "12.12.45",
+    "@types/react": "17.0.0",
+    "@types/react-dom": "17.0.0",
     "@types/react-modal": "^3.12.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-toggle": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.0",
+    "cypress": "7.6.0",
     "eslint": "^7.29.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.4.0",
+    "eslint-plugin-cypress": "2.11.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-import-helpers": "^1.1.0",
     "eslint-plugin-jest": "^24.3.6",
@@ -79,6 +87,12 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.3.1"
+    "istanbul-lib-coverage": "2.0.5",
+    "nyc": "^15.1.0",
+    "prettier": "^2.3.1",
+    "react-devtools": "^4.13.5",
+    "source-map-support": "^0.5.19",
+    "ts-node": "^10.0.0",
+    "typescript": "4.1.3"
   }
 }
